documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32VB.BAS


Public Declare Function AX1_CardClose Lib "AX1W32.DLL" Alias "_AX1_CardClose@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardOpen Lib "AX1W32.DLL" Alias "_AX1_CardOpen@8" (ByRef lpHandle As Long, ByVal cardnum As Long) As Long
Public Declare Function AX1_CardReset Lib "AX1W32.DLL" Alias "_AX1_CardReset@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardStart Lib "AX1W32.DLL" Alias "_AX1_CardStart@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_CardStop Lib "AX1W32.DLL" Alias "_AX1_CardStop@4" (ByVal handleval As Long) As Long
Public Declare Function AX1_ErrCtrlConfig Lib "AX1W32.DLL" Alias "_AX1_ErrCtrlConfig@16" (ByVal configval As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrNetEnable Lib "AX1W32.DLL" Alias "_AX1_ErrNetEnable@16" (ByVal configval As Long, ByVal trigid As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrPktConfig Lib "AX1W32.DLL" Alias "_AX1_ErrPktConfig@32" (ByVal configval As Long, ByVal blendflags As Long, ByVal trigid As Integer, ByRef packet As Byte, ByVal pktlen As Integer, ByVal errpadlen As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrRSNConfig Lib "AX1W32.DLL" Alias "_AX1_ErrRSNConfig@20" (ByVal configval As Long, ByVal trigid As Integer, ByVal modifier As Long, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_ErrXmtConfig Lib "AX1W32.DLL" Alias "_AX1_ErrXmtConfig@16" (ByVal configval As Long, ByVal trigid As Integer, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_EventConfig Lib "AX1W32.DLL" Alias "_AX1_EventConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_FDSGetBoolean Lib "AX1W32.DLL" Alias "_AX1_FDSGetBoolean@32" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Long
Public Declare Function AX1_FDSGetFloat32 Lib "AX1W32.DLL" Alias "_AX1_FDSGetFloat32@32" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Single
Public Declare Function AX1_FDSGetFloat64 Lib "AX1W32.DLL" Alias "_AX1_FDSGetFloat64@32" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Double
Public Declare Function AX1_FDSGetOpaqueFix Lib "AX1W32.DLL" Alias "_AX1_FDSGetOpaqueFix@36" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByRef outbuf As Byte, ByVal bufsize As Long) As Integer
Public Declare Function AX1_FDSGetOpaqueVar Lib "AX1W32.DLL" Alias "_AX1_FDSGetOpaqueVar@36" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByRef outbuf As Byte, ByVal bufsize As Long) As Integer
Public Declare Function AX1_FDSGetSigned32 Lib "AX1W32.DLL" Alias "_AX1_FDSGetSigned32@32" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Long
'Note: The following function uses a data type not supported in VB6.
'Public Declare Function AX1_FDSGetSigned64 Lib "AX1W32.DLL" Alias "_AX1_FDSGetSigned64@32" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As LONGLONG
Public Declare Function AX1_FDSGetStatus Lib "AX1W32.DLL" Alias "_AX1_FDSGetStatus@20" (ByRef buf As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long) As Byte
Public Declare Function AX1_FDSGetString Lib "AX1W32.DLL" Alias "_AX1_FDSGetString@36" (ByRef buf As Byte, ByRef status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal outbuf As String, ByVal bufsize As Long) As Integer
Public Declare Function AX1_FDSPutBoolean Lib "AX1W32.DLL" Alias "_AX1_FDSPutBoolean@36" (ByVal putval As Long, ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Byte
Public Declare Function AX1_FDSPutFloat32 Lib "AX1W32.DLL" Alias "_AX1_FDSPutFloat32@36" (ByVal putval As Single, ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Byte
Public Declare Function AX1_FDSPutFloat64 Lib "AX1W32.DLL" Alias "_AX1_FDSPutFloat64@40" (ByVal putval As Double, ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Byte
Public Declare Function AX1_FDSPutOpaqueFix Lib "AX1W32.DLL" Alias "_AX1_FDSPutOpaqueFix@36" (ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByRef inbuf As Byte, ByVal bufsize As Long) As Byte
Public Declare Function AX1_FDSPutOpaqueVar Lib "AX1W32.DLL" Alias "_AX1_FDSPutOpaqueVar@40" (ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByRef inbuf As Byte, ByVal datalen As Integer, ByVal bufsize As Long) As Byte
Public Declare Function AX1_FDSPutSigned32 Lib "AX1W32.DLL" Alias "_AX1_FDSPutSigned32@36" (ByVal putval As Long, ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Byte
'Note: The following function uses a data type not supported in VB6.
'Public Declare Function AX1_FDSPutSigned64 Lib "AX1W32.DLL" Alias "_AX1_FDSPutSigned64@40" (ByVal putval As LONGLONG, ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal byteswap As Long) As Byte
Public Declare Sub AX1_FDSPutStatus Lib "AX1W32.DLL" Alias "_AX1_FDSPutStatus@24" (ByRef buf As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal status As Byte)
Public Declare Function AX1_FDSPutString Lib "AX1W32.DLL" Alias "_AX1_FDSPutString@36" (ByRef buf As Byte, ByVal status As Byte, ByVal fds_desc As FDSDESC, ByVal ds_num As Long, ByVal offset As Long, ByVal inbuf As String, ByVal bufsize As Long) As Byte
Public Declare Function AX1_FldGetBoolean Lib "AX1W32.DLL" Alias "_AX1_FldGetBoolean@12" (ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long) As Long
Public Declare Function AX1_FldGetFloat32 Lib "AX1W32.DLL" Alias "_AX1_FldGetFloat32@12" (ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long) As Single
Public Declare Function AX1_FldGetFloat64 Lib "AX1W32.DLL" Alias "_AX1_FldGetFloat64@12" (ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long) As Double
Public Declare Function AX1_FldGetOpaqueFix Lib "AX1W32.DLL" Alias "_AX1_FldGetOpaqueFix@16" (ByRef buf As Byte, ByVal offset As Long, ByRef outbuf As Byte, ByVal bufsize As Long) As Integer
Public Declare Function AX1_FldGetOpaqueVar Lib "AX1W32.DLL" Alias "_AX1_FldGetOpaqueVar@16" (ByRef buf As Byte, ByVal offset As Long, ByRef outbuf As Byte, ByVal bufsize As Long) As Integer
Public Declare Function AX1_FldGetSigned32 Lib "AX1W32.DLL" Alias "_AX1_FldGetSigned32@12" (ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long) As Long
'Note: The following function uses a data type not supported in VB6.
'Public Declare Function AX1_FldGetSigned64 Lib "AX1W32.DLL" Alias "_AX1_FldGetSigned64@12" (ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long) As LONGLONG
Public Declare Function AX1_FldGetString Lib "AX1W32.DLL" Alias "_AX1_FldGetString@16" (ByRef buf As Byte, ByVal offset As Long, ByVal outbuf As String, ByVal bufsize As Long) As Integer
Public Declare Sub AX1_FldPutBoolean Lib "AX1W32.DLL" Alias "_AX1_FldPutBoolean@16" (ByVal putval As Long, ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long)
Public Declare Sub AX1_FldPutFloat32 Lib "AX1W32.DLL" Alias "_AX1_FldPutFloat32@16" (ByVal putval As Single, ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long)
Public Declare Sub AX1_FldPutFloat64 Lib "AX1W32.DLL" Alias "_AX1_FldPutFloat64@20" (ByVal putval As Double, ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long)
Public Declare Sub AX1_FldPutOpaqueFix Lib "AX1W32.DLL" Alias "_AX1_FldPutOpaqueFix@16" (ByRef buf As Byte, ByVal offset As Long, ByRef inbuf As Byte, ByVal bufsize As Long)
Public Declare Sub AX1_FldPutOpaqueVar Lib "AX1W32.DLL" Alias "_AX1_FldPutOpaqueVar@20" (ByRef buf As Byte, ByVal offset As Long, ByRef inbuf As Byte, ByVal datalen As Integer, ByVal bufsize As Long)
Public Declare Sub AX1_FldPutSigned32 Lib "AX1W32.DLL" Alias "_AX1_FldPutSigned32@16" (ByVal putval As Long, ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long)
'Note: The following function uses a data type not supported in VB6.
'Public Declare Sub AX1_FldPutSigned64 Lib "AX1W32.DLL" Alias "_AX1_FldPutSigned64@20" (ByVal putval As LONGLONG, ByRef buf As Byte, ByVal offset As Long, ByVal byteswap As Long)
Public Declare Sub AX1_FldPutString Lib "AX1W32.DLL" Alias "_AX1_FldPutString@16" (ByRef buf As Byte, ByVal offset As Long, ByVal inbuf As String, ByVal bufsize As Long)
Public Declare Function AX1_Hton16 Lib "AX1W32.DLL" Alias "_AX1_Hton16@4" (ByVal val As Integer) As Integer
Public Declare Function AX1_Hton32 Lib "AX1W32.DLL" Alias "_AX1_Hton32@4" (ByVal val As Long) As Long
'Note: The following function uses a data type not supported in VB6.
'Public Declare Function AX1_Hton64 Lib "AX1W32.DLL" Alias "_AX1_Hton64@8" (ByVal val As ULONGLONG) As ULONGLONG
Public Declare Function AX1_MakeDstIP Lib "AX1W32.DLL" Alias "_AX1_MakeDstIP@4" (ByVal vlid As Integer) As Long
Public Declare Function AX1_MakeDstIPUnicast Lib "AX1W32.DLL" Alias "_AX1_MakeDstIPUnicast@16" (ByVal domain As Integer, ByVal side As Integer, ByVal location As Integer, ByVal part As Integer) As Long
Public Declare Function AX1_MakeDstMAC Lib "AX1W32.DLL" Alias "_AX1_MakeDstMAC@8" (ByVal vlid As Integer, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_MakeDstMACEx Lib "AX1W32.DLL" Alias "_AX1_MakeDstMACEx@12" (ByVal vlid As Integer, ByVal macconst As Long, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_MakeSrcIP Lib "AX1W32.DLL" Alias "_AX1_MakeSrcIP@16" (ByVal domain As Integer, ByVal side As Integer, ByVal location As Integer, ByVal part As Integer) As Long
Public Declare Function AX1_MakeSrcIPEx Lib "AX1W32.DLL" Alias "_AX1_MakeSrcIPEx@8" (ByVal userid As Integer, ByVal part As Integer) As Long
Public Declare Function AX1_MakeSrcMAC Lib "AX1W32.DLL" Alias "_AX1_MakeSrcMAC@20" (ByVal domain As Integer, ByVal side As Integer, ByVal location As Integer, ByVal intid As Integer, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_MakeSrcMACEx Lib "AX1W32.DLL" Alias "_AX1_MakeSrcMACEx@12" (ByVal userid As Integer, ByVal intid As Integer, ByRef pAddress As ADDRESS) As Long
Public Declare Function AX1_MIBGetNetInfo Lib "AX1W32.DLL" Alias "_AX1_MIBGetNetInfo@16" (ByVal mibtype As Integer, ByRef data As Byte, ByVal busnum As Integer, ByVal handleval As Long) As Long
Public Declare Function AX1_MIBGetPortInfo Lib "AX1W32.DLL" Alias "_AX1_MIBGetPortInfo@12" (ByRef data As Byte, ByVal hport As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_MIBGetVLInfo Lib "AX1W32.DLL" Alias "_AX1_MIBGetVLInfo@16" (ByVal mibtype As Integer, ByRef data As Byte, ByVal hvl As Long, ByVal handleval As Long) As Long
Public Declare Function AX1_NetConfig Lib "AX1W32.DLL" Alias "_AX1_NetConfig@20" (ByVal configval As Long, ByVal macconst As Long, ByVal speed As Integer, ByVal netid As Integer, ByVal handleval As Long) As Long
